fix: popup list <td> 'align'-attr doesn't work
In chrome browser, <td align='right'...> in popup list doesn't work at first
invokation.  Move it from td attribute to css.

--- a/app/assets/stylesheets/edgarj/base.css
+++ b/app/assets/stylesheets/edgarj/base.css
@@ -45,6 +45,13 @@ div#edgarj_list table.list tr:hover, div#edgarj_popup_list table.list tr:hover {
   background-color: #8fc;
 }
 
+div#edgarj_popup_list td.align_right {
+  text-align:       right;
+}
+div#edgarj_popup_list td.align_center {
+  text-align:       center;
+}
+
 /* form by <table> */
 form {
   margin: 0em;
